# contact-book-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/core/: __init__.py  config.py  database.py  types.py
app/models/: __init__.py  contact.py  email.py  phone.py
